--- a/src/index.html
+++ b/src/index.html
@@ -18,73 +18,13 @@
     <![endif]-->
   </head>
   <body>
-    <div class="container" style="width: 650px;">
-      <div class="row">
-        <div class="col-lg-12">
-          <h1 class="text-center">Pet's Election</h1>
-          <hr/>
-          <br/>
-          <div id="loader">
-            <p class="text-center">Loading...</p>
-          </div>
-          <div id="content" style="display: none;">
-            <table class="table">
-              <thead>
-                <tr>
-                  <th scope="col">ID</th>
-                  <th scope="col">Name</th>
-                  <th scope="col">Breed</th>
-                  <th scope="col">Age</th>
-                  <th scope="col">Location</th>
-                  <th scope="col">Images</th>
-                  <th scope="col">Votes</th>
-                </tr>
-              </thead>
-              <tbody id="candidatesResults">
-              </tbody>
-            </table>
-            <hr/>
-            <form onSubmit="App.castVote(); return false;" id="voteForm">
-              <h4>Vote Candidate</h4>
-              <div class="form-group">
-                <label for="candidatesSelect">Select Candidate</label>
-                <select class="form-control" id="candidatesSelect">
-                </select>
-              </div>
-              <button type="submit" class="btn btn-primary">Vote</button>
-              <hr />
-            </form>
-
-            <form onSubmit="App.castRegister(); return false;" id="regForm">
-              <h4>Register Candidate</h4>
-              <div class="form-group">
-                <label for="candidatesRegisterName">Name</label></br>
-                <input type="text" id="candidatesRegisterName"></br>
-                <label for="candidatesRegisterBreed">Breed</label></br>
-                <input type="text" id="candidatesRegisterBreed"></br>
-                <label for="candidatesRegisterAge">Age</label></br>
-                <input type="number" id="candidatesRegisterAge"></br>
-                <label for="candidatesRegisterLoc">Location</label></br>
-                <input type="text" id="candidatesRegisterLoc"></br>
-                <label for="candidatesRegisterImg">Candidate Profile Picture</label>
-                <select class="form-control" id="candidatesRegisterImg">
-                </select>
-              </div>
-              <button type="submit" class="btn btn-primary">Register</button>
-              <hr />
-            </form>
-            <p id="accountAddress" class="text-center"></p>
-          </div>
-        </div>
-      </div>
-    </div>
+    <a href="./election.html">Election Link</a>
+    <a href="./marketplace.html">MarketSpace Link</a>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
     <script src="js/web3.min.js"></script>
-    <script src="js/truffle-contract.js"></script>
-    <script src="js/app.js"></script>
   </body>
 </html>
