add forum and ui enhancement

--- a/src/marketplace.html
+++ b/src/marketplace.html
@@ -10,6 +10,14 @@
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
+    <style>
+      table td, table th  
+            {    
+            max-width: 150px;
+            word-wrap: break-word;
+            }
+    </style>
+
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -21,7 +29,7 @@
     <div class="container" style="width: 650px;">
       <div class="row">
         <div class="col-lg-12">
-          <h1 class="text-center">Pet's Election</h1>
+          <h1 class="text-center">Pet's Marketplace</h1>
           <hr/>
           <br/>
           <div id="loaderMarketspace">
