--- a/src/election.html
+++ b/src/election.html
@@ -10,6 +10,14 @@
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
+    <style>
+      table td, table th  
+            {    
+            max-width: 150px;
+            word-wrap: break-word;
+            }
+    </style>
+
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
