--- a/src/index.html
+++ b/src/index.html
@@ -17,11 +17,11 @@ h1 {letter-spacing: 6px}
 <div class="w3-content" style="max-width:1500px">
 
 <!-- Header -->
-<header class="w3-panel w3-center w3-opacity" style="padding:128px 16px">
-  <h1 class="w3-jumbo">PET</h1>
-  <h5>A DECENTRALIZED WEB APP FOR PET LOVER</h5>
+<header class="w3-panel w3-center w3-opacity" style="padding:256px 16px">
+  <h1 class="w3-jumbo w3-light-grey">P  E  T</h1>
+  <h5 style="padding:32px 16px">A DECENTRALIZED WEB APP FOR PET LOVER </h5>
   
-  <div class="w3-padding-64">
+  <div class="w3-padding-16">
     <div class="w3-bar w3-border">
       <a href="./election.html" class="w3-bar-item w3-button">Election</a>
       <a href="./marketplace.html" class="w3-bar-item w3-button w3-light-grey">Market</a>
