--- a/src/marketplace.html
+++ b/src/marketplace.html
@@ -40,7 +40,11 @@
           <a href="./marketplace.html" class="w3-bar-item w3-button w3-light-grey">Market</a>
           <a href="./forum.html" class="w3-bar-item w3-button">Forum</a>
         </div>
-        <p id="accountAddressMarketspace" class="text-center"></p>
+        <div class="w3-padding-32">
+          <p id="accountBalanceMarketspace" class="text-center"></p>
+          <p id="accountAddressMarketspace" class="text-center"></p>
+        </div>
+        
       </div>
     </header>
 
